--- a/src/pages/index/index.module.css
+++ b/src/pages/index/index.module.css
@@ -8,8 +8,8 @@ a {cursor: pointer; text-decoration: none;}
 .IndexHeaderMenu {width: 700px; text-align: right; float: right;}
 .IndexHeaderMenu a {font-size: 18px;  padding: 10px; margin: 5px; color: #000000;}
 .IndexHeaderDapp {font-weight: bold; color: #ffffff !important; background-color: #786FFF; border-radius: 16px; padding: 20px !important; margin: 5px 10px !important; min-width: 148px;display: inline-block; text-align: center;}
-.IndexHeaderDappL {font-weight: bold; color: #ffffff !important; background-color: #5776A5; border-radius: 16px; padding: 20px !important; margin: 5px 10px !important;  min-width: 148px; display: inline-block; text-align: center;}
-.IndexHeaderDappS {font-weight: bold; color: #ffffff !important; background-color: #F6C7A9; border-radius: 16px; padding: 20px !important; margin: 5px 10px !important;  min-width: 148px; display: inline-block; text-align: center;}
+.IndexHeaderDappL {font-weight: bold; color: #ffffff !important; background-color: #e1b9be; border-radius: 16px; padding: 20px !important; margin: 5px 10px !important;  min-width: 148px; display: inline-block; text-align: center;}
+.IndexHeaderDappS {font-weight: bold; color: #ffffff !important; background-color: #786FFF; border-radius: 16px; padding: 20px !important; margin: 5px 10px !important;  min-width: 148px; display: inline-block; text-align: center;}
 .BackgrowndFancy {width: 100%; max-width: 990px; position: absolute; top: 0; right: 0; }
 .BackgrowndFancy img {width: 100%;  display: inline-block;max-height: 800px; opacity: 0.6; z-index: 1;}
 .SuperTitle {width: 100%; display: inline-block;  text-align: center; position: relative; z-index: 5; margin-top: 120px;}
@@ -21,7 +21,7 @@ a {cursor: pointer; text-decoration: none;}
 .TextPart {width: 750px; display: block;  text-align: center; position: relative; z-index: 5; margin: 10px auto 30px auto;}
 .TextPart h5 {width: 750px; display: inline-block; font-size: 35px; font-weight: 500; color: #000000; margin: 10px auto; line-height: 1.2; text-align: left;}
 .TextPart h6 {width: 750px; text-align: left; display: inline-block; font-size: 20px; font-weight: 400; color: #000000; margin: 10px auto; line-height: 1.3;}
-.Footer {width: 100%; margin-top: 100px; background-color: #5776A5; display: inline-block; padding: 5px; text-align: center;}
+.Footer {width: 100%; margin-top: 150px; border-top: 5px solid #e1b9be; display: inline-block; text-align: center; position: relative;}
 .FooterLinks {width: 990px; margin: 10px auto; display: block;}
 .CardsLayer {width: 100%;margin: 100px auto 10px auto; display: block; text-align: center;}
 .CardsLayer a {background: rgba(173, 163, 236, 0.3);box-shadow: inset 2px -2px 4px rgba(173, 163, 236, 0.9);border-radius: 30px;width: 200px;height: 290px; display: inline-block; margin: 10px; text-align: center; vertical-align: middle;}
@@ -29,6 +29,7 @@ a {cursor: pointer; text-decoration: none;}
 .CardsLayer figure img {width: 90px; display: inline-block;}
 .CardsLayer p {font-size: 20px; color: #786FFF; font-weight: bold;}
 .TextPartBTN {width: 100%; text-align: left; margin: 10px auto;}
-.FooterLinks {width: 990px; display: inline-block; padding: 10px; margin: 10px;}
+.FooterLinks {width: 500px; background-color: #aa9cfe; border-radius: 18px; display: inline-block; padding: 10px; margin: 10px; position: absolute; right: calc(50% - 260px); top: -55px; border: 5px solid #e1b9be;}
 .FooterLinks a { display: inline-block; color: #ffffff; font-size: 15px; padding: 10px; text-align: left;}
 .FooterLinks p {color: #ffffff; font-size: 12px; margin: 10px auto;}
+.Footer img {width: 100%; display: inline-block;}
