--- a/src/components/Items/ExploreItems/explore-items.module.css
+++ b/src/components/Items/ExploreItems/explore-items.module.css
@@ -1,6 +1,6 @@
 .ItemSingle {width: 200px; display: inline-block; border-radius: 20px;overflow: hidden; background-color: #ffffff; box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32); margin: 10px;background-color: #ffffff;}
 .ItemSingle figure {display: block; width: 100%; height: 150px; overflow: hidden; position: relative;}
-.ItemSingle figure img {display: block; width: 100%; height: 100%; position: absolute; left: 0; top: 0;}
+.ItemSingle figure img {display: block; width: 100%; height: 100%; position: absolute; left: 0; top: 0;object-fit: contain;}
 .ItemSingle .ItemTitle {width: 100%; padding: 10px 4%; text-align: center; display: inline-block; background-color: #ffffff; opacity: 0.7;}
 .ItemSingle .ItemTitle h6 { font-size: 14px; color: #000000;}
 .ItemSingle .ItemInfo {width: 100%; padding: 6px 4%; background-color: #F0F0F0; text-align: center;}
