--- a/src/pages/items/dapp/items-main-sections.module.css
+++ b/src/pages/items/dapp/items-main-sections.module.css
@@ -25,3 +25,5 @@
 .text:last-child {
   margin-bottom: calc(var(--unit) * 10);
 }
+.ComingSoon {width: 700px; display: inline-block; margin: 100px auto;}
+.ComingSoon img {width: 400px;}
