--- a/src/components/Organizations/OrgThingsCardConnected/org-things-card-connected.module.css
+++ b/src/components/Organizations/OrgThingsCardConnected/org-things-card-connected.module.css
@@ -5,4 +5,4 @@
 .OrgThingsCardPics .OpenBTN {position: absolute; top: 5px; right: 5px; width: 50px; height: 30px;}
 .OrgThingsRegularInfoPictureCarousel::-webkit-scrollbar {display: none;}
 .OrgThingsRegularInfoPictureCarousel a, .OrgThingsRegularInfoPictureCarousel figure {display: inline-block; width: 120px; height: 120px; overflow: hidden; position: relative;border-radius: 8px;}
-.OrgThingsRegularInfoPictureCarousel figure img {width: 100%; height: 100%; display: inline-block;}
+.OrgThingsRegularInfoPictureCarousel figure img {width: 100%; height: 100%; display: inline-block; object-fit: contain;}
