--- a/src/components/Global/MainTemplate/main-template.module.css
+++ b/src/components/Global/MainTemplate/main-template.module.css
@@ -7,6 +7,9 @@
   text-align: left;
 }
 
+.BlockNews {position: fixed; bottom: 10px; right: 10px; z-index: 10000000000000; -webkit-backdrop-filter: blur(6px);backdrop-filter: blur(6px); padding: 12px; border-radius: 10px; font-size: 10px; font-weight: bold; color: #555555;}
+.BlockNews a {color: #555555;}
+
 .container {
   padding: calc(var(--unit) * 3) 10px 0 10px;
   min-height: 300px;
